# slopcafe

./: .dev.vars.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  action-plan-v1.md  agent-knowledge-host-spec-PLATFORM-v2.md  agent-knowledge-host-spec-SOLO-v1.md  api-contract-design.md  api-contract-phase2-routes.md  byte-exact-publish-design.md  content-domain-design.md  context-packs-design.md  dcr-design.md  homepage-v1.html  homepage-v2.html  librarian-design.md  migration-slopcafe.md  openapi.json  package-lock.json  package.json  source-retention-design.md  tsconfig.json  vector-search-design.md  wrangler.toml  wrangler.toml.example
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
audits/: README.md  platform-v2-path-audit.html  solo-v1-conformance-audit.html
cli/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
cli/lib/api/: api.dart  api_error.dart  error_code.dart  models.dart  models.freezed.dart  models.g.dart
cli/lib/src/: client.dart  command_base.dart  config.dart  entrypoint.dart  errors.dart  format.dart  output.dart  paths.dart  read_envelope.dart  runner.dart
cli/lib/src/commands/: config_cmd.dart  doc_render.dart  edit.dart  find.dart  get.dart  health.dart  links.dart  list.dart  metadata_args.dart  pack.dart  publish.dart  read.dart  search.dart  spec.dart  update.dart
cli/test/: cli_errors_test.dart  client_test.dart  commands_test.dart  config_test.dart  edit_test.dart  format_test.dart  pack_render_test.dart  paths_test.dart  read_envelope_test.dart  version_test.dart
cli/test/support/: cli_harness.dart  fixtures.dart
cli/tool/: generate_api.dart  openapi.json
docs/: README.md  cloudflare-setup.md  feature-roadmap.md  http-api-quickstart.md  http-api.md  operating.md  security-model.md
docs/design/: README.md  action-plan-v1.md  agent-knowledge-host-spec-PLATFORM-v2.md  agent-knowledge-host-spec-SOLO-v1.md  api-contract-design.md  api-contract-phase2-routes.md  backlinks-design.md  cli-design.md  content-domain-design.md  context-packs-design.md  dcr-design.md  font-support-design.md  librarian-design.md  source-retention-design.md  style-support-design.md  vector-search-design.md
migrations/: 0001_init.sql  0002_oauth_clients.sql  0003_source_format.sql  0004_document_metadata.sql  0005_document_slug.sql  0006_documents_search.sql  0007_key_expiry.sql  0008_source_retention.sql  0009_slug_tombstones.sql  0010_slug_redirect.sql  0011_document_visibility.sql  0012_document_tags.sql  0013_authorship.sql  0014_document_status.sql  0015_source_sha256.sql  0016_document_links.sql
sanitizer/: Cargo.toml
sanitizer/examples/: html2md.rs
sanitizer/src/: lib.rs  markdown.rs
sanitizer/tests/: bypass_corpus.rs
sanitizer/tests/corpus/: SOURCES.md  bypasses.txt  known_exceptions.txt
scripts/: build-openapi.mjs  doc-web-map.json  doc-web.mjs
skills/: README.md  connector-guide.md  publishing.md
src/: access.ts  admin-oauth.ts  admin.ts  advisories.ts  auth.ts  authorize.ts  conditional.ts  console.ts  contract.ts  core.ts  depth.ts  edit.ts  env.ts  html.ts  ids.ts  index.ts  integrity.ts  login.ts  mcp-auth.ts  mcp.ts  metadata.ts  oauth.ts  openapi.ts  pack.ts  pagination.ts  sanitizer.ts  search.ts  serve.ts  session.ts  vector-io.ts  vector.ts  wasm.d.ts  wire.ts
test/: access.test.mjs  advisories.test.mjs  auth.test.mjs  conditional.test.mjs  contract.test.mjs  depth.test.mjs  edit.test.mjs  integrity.test.mjs  metadata.test.mjs  openapi.test.mjs  pack.test.mjs  pagination.test.mjs  register-ts-resolver.mjs  search.test.mjs  session.test.mjs  ts-resolver.mjs  vector.test.mjs
