# Rust→WASM sanitizer wrapper. The only Rust in this project: a thin shell
# around the `ammonia` crate that exposes one function to the Worker.
# Cargo.lock pins exact versions; we declare compatible ranges here.

[package]
name = "sanitizer"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# cdylib so wasm-pack produces a .wasm we can import from the Worker.
# rlib so `cargo test` can build a host-target library to link the tests
# against (the wasm-bindgen `#[wasm_bindgen]` macro is a no-op on host).
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
ammonia = "4"
# html5ever is already in the graph via ammonia; we depend on it explicitly so
# the markdown emitter can walk the parse tree directly. markup5ever_rcdom is
# the small `Rc<RefCell>`-based DOM sink that html5ever doesn't bundle.
html5ever = "0.35"
markup5ever_rcdom = "0.35"

[profile.release]
# Optimize for size — this ships as a Worker asset.
opt-level = "z"
lto = true
codegen-units = 1
strip = true

# wasm-pack ships an old wasm-opt that errors on bulk-memory instructions
# modern rustc emits. Workers supports bulk-memory fine; skip wasm-opt and
# rely on rustc's LTO + opt-z for size.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
